--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,9 @@ services:
       - SPARK_RPC_ENCRYPTION_ENABLED=no
       - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
       - SPARK_SSL_ENABLED=no
-      - HTTP_PROXY=http://localhost:7897  # 这里设置为宿主机的代理地址
+      - HTTP_PROXY=http://localhost:7897
       - HTTPS_PROXY=http://localhost:7897
-      - NO_PROXY=localhost,127.0.0.1,spark-master,spark-worker  # 不走代理的地址
+      - NO_PROXY=localhost,127.0.0.1,spark-master,spark-worker 
     volumes:
       - ~/docker/spark/share:/opt/share
     ports:
