--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,9 +1,7 @@
-version: '2'
-
 services:
   db:
-    build: ./docker/db
-    image: s1mplecc/postgres:15
+    build: ./db
+    image: postgres:15
     hostname: db
     environment:
       - POSTGRES_USER=postgres
@@ -12,8 +10,8 @@ services:
     ports:
       - '5432:5432'
   spark:
-    build: ./docker/spark
-    image: s1mplecc/spark-hadoop:3
+    build: ./spark
+    image: bitnami/spark:3.4.0
     hostname: master
     environment:
       - SPARK_MODE=master
@@ -36,7 +34,7 @@ services:
       - '19888:19888'
   spark-worker-1:
     build: ./spark-worker-1
-    image: s1mplecc/spark-hadoop:3
+    image: bitnami/spark:3.4.0
     hostname: worker1
     environment:
       - SPARK_MODE=worker
@@ -53,7 +51,7 @@ services:
       - '8081:8081'
   spark-worker-2:
     build: ./spark-worker-2
-    image: s1mplecc/spark-hadoop:3
+    image: bitnami/spark:3.4.0
     hostname: worker2
     environment:
       - SPARK_MODE=worker
